[package]
name = "solana-voting-program"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.18"
borsh = "1.0"
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]
[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
tokio = { version = "1", features = ["full"] }